syntax = "proto3";
import "google/protobuf/empty.proto";

package servicediscovery;

service ServiceDiscovery {
    rpc GetServiceInstances(google.protobuf.Empty) returns (ServiceRegistry) {}
}

enum ServiceType {
    gateway = 0;
    gameservice = 1;
    playerservice = 2;
}

message ServiceInstance {
    string id = 1;
    ServiceType type = 2;
    string url = 3;
}

message ServiceRegistry {
    map<int32, ServiceInstance> services = 1;
}

